--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.2",
+    "@mui/material": "^5.5.3",
+    "@mui/styles": "^5.5.3",
+    "@mui/system": "^5.5.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -47,5 +50,8 @@
   "devDependencies": {
     "eslint": "^8.11.0",
     "eslint-plugin-react": "^7.29.4"
+  },
+  "compilerOptions": {
+    "baseUrl": "./src"
   }
 }
