--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
+    "react-native-share": "^7.3.7",
+    "react-native-view-shot": "^3.1.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
