--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.6.10",
     "material-ui-popup-state": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
     "react-native-share": "^7.3.7",
     "react-native-view-shot": "^3.1.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
@@ -47,8 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
   },
   "compilerOptions": {
     "baseUrl": "./src"
